github pages test for index.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <meta charset="UTF-8">
+    <title>Valheim Scrolls</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/light.css">
+    <script src="valheimscrolls.js"></script>
+    <body>
+        <div class="">
+            <h1>This is a Heading</h1>
+            <p>This is a paragraph.</p>
+            <p>This is another paragraph.</p>
+        </div>
+
+    </body>
+</html> 
